--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "url": "https://github.com/hokein/clang-tools-prebuilt.git"
   },
   "keywords": [
-    "clang", "clang-tools", "clang-tidy", "include-fixer"
+    "clang",
+    "clang-tools",
+    "clang-tidy",
+    "include-fixer"
   ],
   "author": "hokein",
   "license": "MIT",
@@ -30,10 +33,10 @@
     "url": "https://github.com/hokein/clang-tools-prebuilt/issues"
   },
   "dependencies": {
-     "home-path": "^0.1.1",
-     "mkdirp": "^0.5.0",
-     "nugget": "^1.5.1",
-     "path-exists": "^1.0.0"
+    "home-path": "^0.1.1",
+    "mkdirp": "^0.5.0",
+    "nugget": "^1.5.1",
+    "path-exists": "^1.0.0"
   },
   "devDependencies": {
     "tape": "^3.0.2"
